# sport-rent-backend

./: .env.example  README.md  docker-compose.yaml  pyproject.toml  ruff.toml  schema.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: auth_helpers.py  dependencies.py  mock_addresses.json  mock_history.json  mock_products.json  mock_users.json
app/api/routes/: auth.py  cart.py  favorites.py  health.py  loyalty.py  product.py  products.py  user.py  users.py
app/assets/: mock_products.json
app/core/: config.py  passwords.py  security.py  tokens.py
app/db/: session.py
app/models/: __init__.py  auth_session.py  user.py
app/schemas/: auth.py  cart.py  favorites.py  loyalty.py  product.py  user.py
app/services/: auth.py  image.py
migrations/: env.py
migrations/versions/: e7ecc88b201f_create_auth_tables.py
scripts/: seed.py
tests/: conftest.py  support.py
tests/integration/: test_auth.py
